Assign_3 has been updated with a functional logger Main function will accept only strings as arguments Further testing is required

--- a/Assign_3/mylogger.conf
+++ b/Assign_3/mylogger.conf
@@ -1,22 +1,23 @@
 [loggers]
-keys=root
+keys = root
 
 [logger_root]
-handlers=file
-level=NOTSET
+handlers = file
+level = NOTSET
 
 [formatters]
-keys=simple
+keys = simple
 
 [formatter_simple]
-format=%(asctime)s - %(name)s - %(levelname)s - %(message)s
+format = %(asctime)s - %(name)s - %(levelname)s - %(message)s
 
 [handlers]
-keys=file
+keys = file
 
 [handler_file]
-class=FileHandler
-interval=midnight
-formatter=simple
-level=INFO
-args=('report.log','a')
+class = FileHandler
+interval = midnight
+formatter = simple
+level = INFO
+args = ('myreport.log', 'a')
+
