Renamed the variables and fixed the detection mechanism in main.py with arg r.

--- a/Assign_3/mylogger.conf
+++ b/Assign_3/mylogger.conf
@@ -19,5 +19,5 @@ class = FileHandler
 interval = midnight
 formatter = simple
 level = INFO
-args = ('myreport.log', 'a')
+args = ('report.log', 'a')
 
